# protest

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  devenv.nix
.github/workflows/: ci.yml  publish.yml
protest/: Cargo.toml  README.md
protest-cli/: Cargo.toml  README.md
protest-cli/src/: main.rs
protest-cli/tests/: cli_integration_test.rs
protest-criterion/: Cargo.toml  README.md
protest-criterion/benches/: example_benchmarks.rs  sorting_benchmarks.rs  string_benchmarks.rs
protest-criterion/src/: lib.rs
protest-derive/: Cargo.toml
protest-derive/src/: derive.rs  lib.rs  property_test.rs
protest-extras/: Cargo.toml  README.md
protest-extras/examples/: advanced_shrinking.rs
protest-extras/src/: lib.rs  shrinking.rs
protest-extras/src/generators/: collections.rs  datetime.rs  domain.rs  mod.rs  network.rs  numeric.rs  text.rs
protest-insta/: Cargo.toml  README.md
protest-insta/examples/: debug_snapshots.rs  json_snapshots.rs  property_snapshot_test.rs
protest-insta/src/: lib.rs
protest-proptest-compat/: Cargo.toml  README.md
protest-proptest-compat/examples/: migration_example.rs  using_helpers.rs
protest-proptest-compat/src/: lib.rs
protest-stateful/: Cargo.toml  README.md
protest-stateful-derive/: Cargo.toml
protest-stateful-derive/src/: lib.rs  operation.rs  stateful_test.rs
protest-stateful-derive/tests/: derive_tests.rs
protest-stateful/examples/: concurrent_queue.rs  derive_macro.rs  key_value_store.rs  linearizability_verification.rs  sequence_shrinking.rs  stack.rs  weighted_generation.rs
protest-stateful/src/: lib.rs
protest-stateful/src/concurrent/: linearizability.rs  mod.rs
protest-stateful/src/dsl/: mod.rs
protest-stateful/src/invariants/: mod.rs
protest-stateful/src/model/: mod.rs
protest-stateful/src/operations/: generator.rs  mod.rs  sequence.rs  shrinking.rs
protest-stateful/src/temporal/: mod.rs
protest-stateful/tests/: advanced_tests.rs  edge_cases.rs  integration_tests.rs
protest/examples/: advanced_patterns.rs  async_examples.rs  basic_usage.rs  collection_generators.rs  custom_generators.rs  custom_structs.rs  ergonomic_api_demo.rs  performance_examples.rs  property_execution_demo.rs  simple_reverse.rs  statistics_demo.rs  vec_reverse_example.rs
protest/src/: arbitrary.rs  config.rs  coverage.rs  ergonomic.rs  error.rs  execution.rs  generator.rs  lib.rs  performance.rs  persistence.rs  primitives.rs  property.rs  regression.rs  rng.rs  shrink.rs  statistics.rs  strategy.rs  test_runner.rs
protest/src/ergonomic/: auto_gen.rs  builder.rs  closure_property.rs  macros.rs  patterns.rs
protest/tests/: async_integration.rs  basic_derive_test.rs  builder_macro_test.rs  coverage_integration_test.rs  derive_complex_test.rs  derive_customization_integration_test.rs  derive_customization_test.rs  derive_integration_test.rs  end_to_end_integration.rs  error_reporting_test.rs  examples_integration_test.rs  macro_integration_test.rs  performance_test.rs  persistence_integration.rs  property_test_macro_test.rs  regression_test_suite.rs  statistics_test.rs  test_framework_integration.rs
