[workspace]
members = ["protest", "protest-derive", "protest-extras"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["shrynx <shriyansbhatnagar@gmail.com>"]
repository = "https://github.com/shrynx/protest"

[workspace.dependencies]
# Shared dependencies for proc macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# Core dependencies
rand = "0.8"
num-traits = "0.2"
crossbeam = "0.8"
num_cpus = "1.0"

[patch.crates-io]
protest = { path = "protest" }
protest-derive = { path = "protest-derive" }
protest-extras = { path = "protest-extras" }
