[workspace]
members = ["protest", "protest-derive", "protest-extras", "protest-cli", "protest-stateful", "protest-stateful-derive", "protest-criterion", "protest-insta", "protest-proptest-compat"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
authors = ["shrynx <shriyansbhatnagar@gmail.com>"]
repository = "https://github.com/shrynx/protest"

[workspace.dependencies]
# Shared dependencies for proc macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# Core dependencies
rand = "0.8"
num-traits = "0.2"
crossbeam = "0.8"
num_cpus = "1.0"

# Internal workspace crates
protest = { version = "*", path = "protest" }
protest-derive = { version = "*", path = "protest-derive" }
protest-stateful = { version = "*", path = "protest-stateful" }
protest-stateful-derive = { version = "*", path = "protest-stateful-derive" }
protest-extras = { version = "*", path = "protest-extras" }
protest-criterion = { version = "*", path = "protest-criterion" }
protest-insta = { version = "*", path = "protest-insta" }
protest-proptest-compat = { version = "*", path = "protest-proptest-compat" }

[patch.crates-io]
protest = { path = "protest" }
protest-derive = { path = "protest-derive" }
protest-extras = { path = "protest-extras" }
protest-stateful = { path = "protest-stateful" }
protest-stateful-derive = { path = "protest-stateful-derive" }
protest-criterion = { path = "protest-criterion" }
protest-insta = { path = "protest-insta" }
protest-proptest-compat = { path = "protest-proptest-compat" }
