[package]
name = "protest-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line tool for managing Protest property test failures"

[[bin]]
name = "protest"
path = "src/main.rs"

[dependencies]
protest = { workspace = true, features = ["persistence"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
serde_json = "1.0"
colored = "2.1"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.0"
