[package]
name = "protest-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Derive macros for the Protest property testing library"

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true