[package]
name = "protest-extras"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Extra generators for the Protest property testing library"
readme = "README.md"
keywords = ["testing", "property-testing", "quickcheck", "generators"]
categories = ["development-tools::testing"]

[dependencies]
protest = { path = "../protest" }
rand = "0.8"
num-traits = "0.2"

[dev-dependencies]
protest = { path = "../protest", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
