[package]
name = "protest-insta"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Snapshot testing integration for Protest property-based testing"
keywords = ["testing", "property-testing", "snapshot", "insta", "quickcheck"]
categories = ["development-tools::testing"]

[dependencies]
protest = { path = "../protest" }
insta = { version = "1.41", features = ["json", "yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { workspace = true }

[dev-dependencies]
