[package]
name = "protest-stateful-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Procedural macros for protest-stateful - stateful property testing"
keywords = ["testing", "property-testing", "quickcheck", "stateful", "macros"]
categories = ["development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
protest-stateful = { path = "../protest-stateful" }
